fixed bug when you can scroll horizontaly on mobile version

--- a/docs/doks-theme/_sass/generic/_base.scss
+++ b/docs/doks-theme/_sass/generic/_base.scss
@@ -9,6 +9,7 @@ html {
 	-webkit-tap-highlight-color: transparent;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 
 	@media (min-width: $screen-sm-min) {
 		font-size: 16px;
